--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ transformers
 improved-diffusion/improved_diffusion.egg-info
 **/wandb
 improved-diffusion/diffusion_models
-**/__pycache__/**
+**/*.pyc
